wrappers/rust/bindings.rs

extern "C" {
    #[doc = " @brief Get the body state\n @param b The Moordyn body\n @param r The output position (6dof)\n @param rd The output velocity (6dof)\n @return MOORDYN_INVALID_VALUE if a NULL body is provided, MOORDYN_SUCCESS\n otherwise"]
    pub fn MoorDyn_GetBodyState(b: MoorDynBody, r: *mut f64, rd: *mut f64)
        -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __MoorDyn {
    _unused: [u8; 0],
}
#[doc = " A mooring system instance"]
pub type MoorDyn = *mut __MoorDyn;
extern "C" {
    #[doc = " @brief Creates a MoorDyn instance\n\n At the time of creating a new MoorDyn instance, the input file is read\n and all the objects and structures are created. You must call afterwards\n MoorDyn_Init() to compute the initial conditions\n\n @param infilename The input file, if either NULL or \"\", then\n \"Mooring/lines.txt\" will be considered\n @return The mooring instance, NULL if errors happened"]
    pub fn MoorDyn_Create(infilename: *const ::std::os::raw::c_char) -> MoorDyn;
}
extern "C" {
    #[doc = " @brief Get the number of coupled Degrees Of Freedom (DOFs)\n\n The number of components for some parameters in MoorDyn_Init() and\n MoorDyn_Step() can be known using this function\n @return MOORDYN_INVALID_VALUE if @p system is NULL, MOORDYN_SUCESS\n otherwise"]
    pub fn MoorDyn_NCoupledDOF(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the instance verbosity level\n @param system The Moordyn system\n @param verbosity The verbosity level. It can take the following values\n  - MOORDYN_DBG_LEVEL Every single message will be printed\n  - MOORDYN_MSG_LEVEL Messages specially designed to help debugging the\n code will be omitted\n  - MOORDYN_WRN_LEVEL Just errors and warnings will be reported\n  - MOORDYN_ERR_LEVEL Just errors will be reported\n  - MOORDYN_NO_OUTPUT No info will be reported\n @return MOORDYN_SUCESS If the verbosity level is correctly set, an error\n code otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_SetVerbosity(
        system: MoorDyn,
        verbosity: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the instance log file\n @param system The Moordyn system\n @param log_path The file path to print the log file\n @return MOORDYN_SUCESS If the log file is correctly set, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_SetLogFile(
        system: MoorDyn,
        log_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the instance log file printing level\n @param system The Moordyn system\n @param verbosity The log file print level. It can take the following\n values\n  - MOORDYN_DBG_LEVEL Every single message will be printed\n  - MOORDYN_MSG_LEVEL Messages specially designed to help debugging the\n code will be omitted\n  - MOORDYN_WRN_LEVEL Just errors and warnings will be reported\n  - MOORDYN_ERR_LEVEL Just errors will be reported\n  - MOORDYN_NO_OUTPUT No info will be reported\n @return MOORDYN_SUCESS If the printing level is correctly set, an error\n code otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_SetLogLevel(
        system: MoorDyn,
        verbosity: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Log a message\n @param system The Moordyn system\n @param level The message level. It can take the following values\n  - MOORDYN_DBG_LEVEL for debugging messages\n  - MOORDYN_MSG_LEVEL for regular information messages\n  - MOORDYN_WRN_LEVEL for warnings\n  - MOORDYN_ERR_LEVEL for errors\n @param msg The message to log\n @return MOORDYN_SUCESS If the printing level is correctly set, an error\n code otherwise (see @ref moordyn_errors)\n @note This messages are subjected to the same rules than the inner\n messages, i.e. if @p level is lower than the threshold levels set with\n MoorDyn_SetVerbosity() and MoorDyn_SetLogLevel(), the message will not be\n logged in the terminal and the log file respectively\n @note This function will not log the file, line and function where it is\n called from, not even in case of warnings or errors"]
    pub fn MoorDyn_Log(
        system: MoorDyn,
        level: ::std::os::raw::c_int,
        msg: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute the initial condition of a MoorDyn system\n\n At the time of creating a new MoorDyn instance, the input file is read\n and all the objects and structures are created. You must call afterwards\n MoorDyn_Init() to compute the initial conditions\n\n @param system The Moordyn system\n @param x Position vector (6 components per coupled body or cantilevered\n rod and 3 components per pinned rod or coupled point)\n @param xd Velocity vector (6 components per coupled body or cantilevered\n rod and 3 components per pinned rod or coupled point)\n @return MOORDYN_SUCESS If the mooring system is correctly initialized,\n an error code otherwise (see @ref moordyn_errors)\n @note MoorDyn_NCoupledDOF() can be used to know the number of components\n required for \\p x and \\p xd"]
    pub fn MoorDyn_Init(system: MoorDyn, x: *const f64, xd: *const f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief The same than MoorDyn_Init(), but the initial condition is not\n computed at all.\n\n This is of use when you are loading a state file afterwards with\n Moordyn_Load()\n\n @param system The Moordyn system\n @param x Position vector (6 components per coupled body or cantilevered\n rod and 3 components per pinned rod or coupled point)\n @param xd Velocity vector (6 components per coupled body or cantilevered\n rod and 3 components per pinned rod or coupled point)\n @return MOORDYN_SUCESS If the mooring system is correctly initialized,\n an error code otherwise (see @ref moordyn_errors)\n @note MoorDyn_NCoupledDOF() can be used to know the number of components\n required for \\p x and \\p xd"]
    pub fn MoorDyn_Init_NoIC(
        system: MoorDyn,
        x: *const f64,
        xd: *const f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Runs a time step of the MoorDyn system\n @param system The Moordyn system\n @param x Position vector\n @param xd Velocity vector\n @param f Output forces\n @param t Simulation time\n @param dt Time step\n @return MOORDYN_SUCESS if the mooring system has correctly evolved, an\n error code otherwise (see @ref moordyn_errors)\n @note MoorDyn_NCoupledDOF() can be used to know the number of components\n required for \\p x, \\p xd and \\p f"]
    pub fn MoorDyn_Step(
        system: MoorDyn,
        x: *const f64,
        xd: *const f64,
        f: *mut f64,
        t: *mut f64,
        dt: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Releases MoorDyn allocated resources\n @param system The Moordyn system\n @return MOORDYN_SUCESS If the mooring system is correctly destroyed, an\n error code otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_Close(system: MoorDyn) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the wave kinematics instance\n\n The wave kinematics instance is only useful if WaveKin option is set to 2\n in the input file.\n @param system The Moordyn system\n @return The waves instance, NULL if errors happened"]
    pub fn MoorDyn_GetWaves(system: MoorDyn) -> MoorDynWaves;
}
extern "C" {
    #[doc = " @brief Initializes the external Wave kinetics\n\n This is useless unless WaveKin option is set to 1 in the input file. If\n that is the case, remember calling this function after MoorDyn_Init()\n @param system The Moordyn system\n @param n The number of points where the wave kinematics shall be provided\n @return MOORDYN_SUCESS If the external waves are correctly initialized,\n an error code otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_ExternalWaveKinInit(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of points where the waves kinematics shall be\n provided\n\n If env.WaveKin is not WAVES_EXTERNAL, this will return 0\n @return The number of evaluation points\n @see MoorDyn::ExternalWaveKinInit()\n @see MoorDyn::GetWaves()\n/\n/** @brief Get the number of points where the waves kinematics shall be\n provided\n\n This is useless unless WaveKin option is set to 1 in the input file\n @param system The Moordyn system\n @param n The output number of points where the wave kinematics shall be\n provided\n @return MOORDYN_SUCESS"]
    pub fn MoorDyn_ExternalWaveKinGetN(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the points where the waves kinematics shall be provided\n\n The kinematics on those points shall be provided just if WaveKin is set\n to 1 in the input file\n @param system The Moordyn system\n @param r The output coordinates (3 components per point)\n @return MOORDYN_SUCESS If the data is correctly set, an error code\n otherwise (see @ref moordyn_errors)\n @see MoorDyn_ExternalWaveKinInit()"]
    pub fn MoorDyn_ExternalWaveKinGetCoordinates(
        system: MoorDyn,
        r: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the kinematics of the waves\n\n Use this function if WaveKin option is set to 1 in the input file\n @param system The Moordyn system\n @param U The velocities at the points (3 components per point)\n @param Ud The accelerations at the points (3 components per point)\n @param t Simulation time\n @return MOORDYN_SUCESS If the data is correctly set, an error code\n otherwise (see @ref moordyn_errors)\n @see MoorDyn_ExternalWaveKinInit()\n @see MoorDyn_ExternalWaveKinGetCoordinates()"]
    pub fn MoorDyn_ExternalWaveKinSet(
        system: MoorDyn,
        U: *const f64,
        Ud: *const f64,
        t: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the number of bodies\n\n Remember that the first body index is 1\n @param system The Moordyn system\n @param n The output number of bodies\n @return MOORDYN_SUCESS If the number is successfully got, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetNumberBodies(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a rigid body\n\n Remember that the first body index is 1\n @param system The Moordyn system\n @param b The body index\n @return The body instance, NULL if errors happened"]
    pub fn MoorDyn_GetBody(system: MoorDyn, b: ::std::os::raw::c_uint) -> MoorDynBody;
}
extern "C" {
    #[doc = " @brief Get the number of rods\n\n Remember that the first rod index is 1\n @param system The Moordyn system\n @param n The output number of rods\n @return MOORDYN_SUCESS If the number is successfully got, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetNumberRods(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a rod\n @param system The Moordyn system\n @param r The rod\n @return The rod instance, NULL if errors happened"]
    pub fn MoorDyn_GetRod(system: MoorDyn, r: ::std::os::raw::c_uint) -> MoorDynRod;
}
extern "C" {
    #[doc = " @brief Get the number of points\n\n Remember that the first point index is 1\n @param system The Moordyn system\n @param n The output number of points\n @return MOORDYN_SUCESS If the number is successfully got, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetNumberPoints(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
